reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__envelope.rs_line_139_col_9.log

*** crates/tracewake-core/src/events/envelope.rs:139:9: replace EventKind::all -> &'static[EventKind] with Vec::leak(Vec::new())

*** mutation diff:
--- crates/tracewake-core/src/events/envelope.rs
+++ replace EventKind::all -> &'static[EventKind] with Vec::leak(Vec::new())
@@ -131,74 +131,17 @@
     StuckDiagnosticRecorded,
     NoHumanDayStarted,
     NoHumanDayCompleted,
     ReplayProjectionRebuilt,
 }
 
 impl EventKind {
     pub const fn all() -> &'static [EventKind] {
-        &[
-            EventKind::ControllerAttached,
-            EventKind::ControllerDetached,
-            EventKind::ActorMoved,
-            EventKind::DoorOpened,
-            EventKind::DoorClosed,
-            EventKind::ContainerOpened,
-            EventKind::ContainerClosed,
-            EventKind::ItemRemovedFromContainer,
-            EventKind::ItemTakenFromPlace,
-            EventKind::ItemPlacedInContainer,
-            EventKind::ItemPlacedInPlace,
-            EventKind::ActorWaited,
-            EventKind::TimeAdvanced,
-            EventKind::ActionStarted,
-            EventKind::ActionFailed,
-            EventKind::ActionRejected,
-            EventKind::NoHumanAdvanceStarted,
-            EventKind::NoHumanAdvanceCompleted,
-            EventKind::InitialBeliefSeeded,
-            EventKind::RoleAssignmentNoticeRecorded,
-            EventKind::StartingBeliefRecorded,
-            EventKind::ObservationRecorded,
-            EventKind::BeliefUpdated,
-            EventKind::ExpectationContradicted,
-            EventKind::ContainerChecked,
-            EventKind::NeedDeltaApplied,
-            EventKind::NeedThresholdCrossed,
-            EventKind::CandidateGoalsEvaluated,
-            EventKind::IntentionStarted,
-            EventKind::IntentionContinued,
-            EventKind::IntentionSuspended,
-            EventKind::IntentionResumed,
-            EventKind::IntentionCompleted,
-            EventKind::IntentionFailed,
-            EventKind::IntentionAbandoned,
-            EventKind::IntentionInterrupted,
-            EventKind::RoutineStepStarted,
-            EventKind::RoutineStepCompleted,
-            EventKind::RoutineStepFailed,
-            EventKind::DecisionTraceRecorded,
-            EventKind::SleepStarted,
-            EventKind::SleepCompleted,
-            EventKind::SleepInterrupted,
-            EventKind::FoodConsumed,
-            EventKind::FoodServiceUsed,
-            EventKind::EatFailed,
-            EventKind::WorkBlockStarted,
-            EventKind::WorkBlockCompleted,
-            EventKind::WorkBlockFailed,
-            EventKind::ContinueRoutineProposed,
-            EventKind::ContinueRoutineAccepted,
-            EventKind::ContinueRoutineRejected,
-            EventKind::StuckDiagnosticRecorded,
-            EventKind::NoHumanDayStarted,
-            EventKind::NoHumanDayCompleted,
-            EventKind::ReplayProjectionRebuilt,
-        ]
+        Vec::leak(Vec::new()) /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn registry() -> Vec<EventKindMetadata> {
         Self::all().iter().map(|kind| kind.metadata()).collect()
     }
 
     pub const fn metadata(self) -> EventKindMetadata {
         EventKindMetadata {


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/events/envelope.rs` has changed (1781910792.495923094s, 3s after last build at 1781910789.167923123s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0015]: cannot call non-const method `Vec::<EventKind>::leak::<'_>` in constant functions
   --> crates/tracewake-core/src/events/envelope.rs:139:9
    |
139 |         Vec::leak(Vec::new()) /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^^^^
    |
    = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

For more information about this error, try `rustc --explain E0015`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0015]: cannot call non-const method `Vec::<envelope::EventKind>::leak::<'_>` in constant functions
   --> crates/tracewake-core/src/events/envelope.rs:139:9
    |
139 |         Vec::leak(Vec::new()) /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^^^^
    |
    = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
